# entroplain

./: .gitignore  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.md  examples.md  package-lock.json  package.json  paper.md  pyproject.toml  test_nvidia.py  test_proxy.py  vercel.json
docs/: AGENT_USAGE.md  USAGE.md
entroplain/: __init__.py  cli.py  cost_tracker.py  dashboard.py  hooks.py  monitor.py  providers.py  proxy.py  shared_state.py
entroplain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: setup.bat  setup.sh
src/: hooks.ts  index.ts  monitor.ts  types.ts
tests/: test_functional.py  test_monitor.py
website/: README.md  package-lock.json  package.json  vercel.json
website/app/: globals.css  layout.tsx  page.tsx
