[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "entroplain"
version = "0.2.3"
description = "Entropy-based early exit for efficient agent reasoning"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Entroplain Contributors"}
]
keywords = ["llm", "agent", "entropy", "early-exit", "efficiency", "reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "typing-extensions>=4.0.0;python_version<'3.10'",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
google = ["google-generativeai>=0.3.0"]
nvidia = ["requests>=2.28.0", "aiohttp>=3.8.0"]
ollama = ["requests>=2.28.0", "aiohttp>=3.8.0"]
llama-cpp = ["llama-cpp-python>=0.2.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.3.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "llama-cpp-python>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
]

proxy = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/entroplain/entroplain"
Documentation = "https://github.com/entroplain/entroplain#readme"
Repository = "https://github.com/entroplain/entroplain.git"
Issues = "https://github.com/entroplain/entroplain/issues"

[project.scripts]
entroplain = "entroplain.cli:main"
entroplain-proxy = "entroplain.proxy:main"
entroplain-dashboard = "entroplain.dashboard:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["entroplain*"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
